Enhance FAQ section with detailed answers and improve accessibility; adjust expertise section padding for better layout.

--- a/index.html
+++ b/index.html
@@ -39,15 +39,7 @@
           "name": "What areas do you serve?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "We serve Dallas, Houston, Austin, San Antonio, and West Texas."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What types of furniture do you install?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "We install educational, commercial, and FF&E furniture for schools and businesses."
+            "text": "Elite Install serves Dallas, Houston, Austin, San Antonio, and West Texas. We provide commercial furniture installation and project management throughout Texas for schools, offices, and businesses."
           }
         },
         {
@@ -55,7 +47,23 @@
           "name": "Are you insured and certified?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, we are fully insured and our team is certified for professional installations."
+            "text": "Yes, Elite Install is fully insured and our team is certified for professional furniture installations. We comply with all state and local regulations to ensure your project is protected and completed to the highest standards."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What types of furniture do you install?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We install educational, commercial, and FF&E (Furniture, Fixtures & Equipment) furniture for schools, offices, healthcare, and public spaces. Our team is experienced with all major brands and systems."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer project management?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutely. We provide end-to-end project management, including delivery coordination, scheduling, installation, punch lists, and post-installation support. Our goal is to make your project seamless and stress-free."
           }
         },
         {
@@ -63,7 +71,31 @@
           "name": "How do I request a quote?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Simply use the 'Request a Free Quote' button or visit our Contact page."
+            "text": "Requesting a quote is easy. Click any 'Request a Quote' button on our website or visit our Contact page. Provide your project details and we’ll respond promptly with a customized estimate."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What makes Elite Install different from other installation companies?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Elite Install stands out for our reliability, responsive communication, and commitment to customer satisfaction. We focus on clear timelines, professional service, and building long-term partnerships with our clients."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Can you handle large-scale or multi-site installations?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, we have the resources and experience to manage large-scale and multi-site installations across Texas. Our project managers ensure every location receives the same high level of service and attention to detail."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you offer removal or reconfiguration of existing furniture?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We offer furniture removal, reconfiguration, and relocation services to help you update or repurpose your space efficiently and sustainably."
           }
         }
       ]
@@ -215,8 +247,7 @@
           </div>
         </div>
       </div>
-    </section>
-    </section>
+  </section>
 
     <!-- Trust Signals Section -->
     <section class="section trust-signals-section">
@@ -276,49 +307,74 @@
     <section class="section faq-section">
   <div class="container faq-container">
         <h2 class="faq-title">Frequently Asked Questions</h2>
-        <div class="faq-list">
+        <div class="faq-list" role="list">
           <div class="faq-accordion-container">
             <div class="faq-accordion">
-              <button class="faq-question">What areas do you serve?<span class="faq-arrow">&#9662;</span></button>
+              <button class="faq-question" aria-expanded="false">What areas do you serve?<span class="faq-arrow">&#9662;</span></button>
               <div class="faq-answer">
-                <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+                <p>Elite Install serves Dallas, Houston, Austin, San Antonio, and West Texas. We provide commercial furniture installation and project management throughout Texas for schools, offices, and businesses.</p>
               </div>
             </div>
             <div class="faq-accordion">
-              <button class="faq-question">Are you insured and certified?<span class="faq-arrow">&#9662;</span></button>
+              <button class="faq-question" aria-expanded="false">Are you insured and certified?<span class="faq-arrow">&#9662;</span></button>
               <div class="faq-answer">
-                <p>Yes, our team is fully insured and certified for professional installations.</p>
+                <p>Yes, Elite Install is fully insured and our team is certified for professional furniture installations. We comply with all state and local regulations to ensure your project is protected and completed to the highest standards.</p>
               </div>
             </div>
             <div class="faq-accordion">
-              <button class="faq-question">Do you offer project management?<span class="faq-arrow">&#9662;</span></button>
+              <button class="faq-question" aria-expanded="false">What types of furniture do you install?<span class="faq-arrow">&#9662;</span></button>
               <div class="faq-answer">
-                <p>Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
+                <p>We install educational, commercial, and FF&E (Furniture, Fixtures & Equipment) furniture for schools, offices, healthcare, and public spaces. Our team is experienced with all major brands and systems.</p>
               </div>
             </div>
             <div class="faq-accordion">
-              <button class="faq-question">How do I get a quote?<span class="faq-arrow">&#9662;</span></button>
+              <button class="faq-question" aria-expanded="false">Do you offer project management?<span class="faq-arrow">&#9662;</span></button>
               <div class="faq-answer">
-                <p>Click any “Request a Quote” button or visit our Contact page to get started.</p>
+                <p>Absolutely. We provide end-to-end project management, including delivery coordination, scheduling, installation, punch lists, and post-installation support. Our goal is to make your project seamless and stress-free.</p>
+              </div>
+            </div>
+            <div class="faq-accordion">
+              <button class="faq-question" aria-expanded="false">How do I request a quote?<span class="faq-arrow">&#9662;</span></button>
+              <div class="faq-answer">
+                <p>Requesting a quote is easy. Click any “Request a Quote” button on our website or visit our <a href="contact.html">Contact</a> page. Provide your project details and we’ll respond promptly with a customized estimate.</p>
+              </div>
+            </div>
+            <div class="faq-accordion">
+              <button class="faq-question" aria-expanded="false">What makes Elite Install different from other installation companies?<span class="faq-arrow">&#9662;</span></button>
+              <div class="faq-answer">
+                <p>Elite Install stands out for our reliability, responsive communication, and commitment to customer satisfaction. We focus on clear timelines, professional service, and building long-term partnerships with our clients.</p>
+              </div>
+            </div>
+            <div class="faq-accordion">
+              <button class="faq-question" aria-expanded="false">Can you handle large-scale or multi-site installations?<span class="faq-arrow">&#9662;</span></button>
+              <div class="faq-answer">
+                <p>Yes, we have the resources and experience to manage large-scale and multi-site installations across Texas. Our project managers ensure every location receives the same high level of service and attention to detail.</p>
+              </div>
+            </div>
+            <div class="faq-accordion">
+              <button class="faq-question" aria-expanded="false">Do you offer removal or reconfiguration of existing furniture?<span class="faq-arrow">&#9662;</span></button>
+              <div class="faq-answer">
+                <p>We offer furniture removal, reconfiguration, and relocation services to help you update or repurpose your space efficiently and sustainably.</p>
               </div>
             </div>
           </div>
-    <script>
-      // FAQ Accordion Functionality
-      document.addEventListener('DOMContentLoaded', function() {
-        var accordions = document.querySelectorAll('.faq-accordion');
-        accordions.forEach(function(acc) {
-          var btn = acc.querySelector('.faq-question');
-          btn.addEventListener('click', function() {
-            var open = acc.classList.contains('open');
-            // Close all
-            accordions.forEach(function(a) { a.classList.remove('open'); });
-            // Open this one if it was not open
-            if (!open) acc.classList.add('open');
+        </div>
+        <script>
+          // FAQ Accordion Functionality
+          document.addEventListener('DOMContentLoaded', function() {
+            var accordions = document.querySelectorAll('.faq-accordion');
+            accordions.forEach(function(acc) {
+              var btn = acc.querySelector('.faq-question');
+              btn.addEventListener('click', function() {
+                var open = acc.classList.contains('open');
+                // Close all
+                accordions.forEach(function(a) { a.classList.remove('open'); a.querySelector('.faq-question').setAttribute('aria-expanded', 'false'); });
+                // Open this one if it was not open
+                if (!open) { acc.classList.add('open'); btn.setAttribute('aria-expanded', 'true'); }
+              });
+            });
           });
-        });
-      });
-    </script>
+        </script>
         </div>
       </div>
     </section>
