--- a/footer.html
+++ b/footer.html
@@ -14,16 +14,18 @@
                     <li><a href="services.html">Our Services</a></li>
                     <li><a href="projects.html">View Our Work</a></li>
                     <li><a href="contact.html">Become a Partner</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                    <li><a href="terms.html">Terms of Service</a></li>
                 </ul>
             </nav>
             <div class="footer-column contact" aria-labelledby="footer-contact-heading">
-    <h4 id="footer-contact-heading">Get In Touch</h4>
-    <address>
-        <a href="#" class="contact-phone-link" aria-label="Call us">Loading Phone...</a><br>
-        <a href="#" class="contact-email-link" aria-label="Email us">Loading Email...</a><br>
-        <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
-    </address>
-</div>
+                <h4 id="footer-contact-heading">Get In Touch</h4>
+                <address>
+                    <a href="#" class="contact-phone-link" aria-label="Call us">Loading Phone...</a><br>
+                    <a href="#" class="contact-email-link" aria-label="Email us">Loading Email...</a><br>
+                    <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
+                </address>
+            </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Elite Install & Haul. Your Reputation, Installed.</p>
