--- a/footer.html
+++ b/footer.html
@@ -14,15 +14,13 @@
                     <li><a href="services.html">Our Services</a></li>
                     <li><a href="projects.html">View Our Work</a></li>
                     <li><a href="contact.html">Become a Partner</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
-                    <li><a href="terms.html">Terms of Service</a></li>
                 </ul>
             </nav>
             <div class="footer-column contact" aria-labelledby="footer-contact-heading">
                 <h4 id="footer-contact-heading">Get In Touch</h4>
                 <address>
-                    <a href="#" class="contact-phone-link" aria-label="Call us">Loading Phone...</a><br>
-                    <a href="#" class="contact-email-link" aria-label="Email us">Loading Email...</a><br>
+                    <a href="tel:+14693801551" aria-label="Call us at 469-380-1551">(469) 380-1551</a><br>
+                    <a href="mailto:tylerherrick13@gmail.com" aria-label="Email us at tylerherrick13@gmail.com">tylerherrick13@gmail.com</a><br>
                     <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
                 </address>
             </div>
