--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                             </div>
                             <div>
                                 <h4>Email Us</h4>
-                                <p><a href="#" class="contact-email-link">Loading Email...</a></p>
+                                <p><a href="mailto:tylerherrick13@gmail.com">tylerherrick13@gmail.com</a></p>
                             </div>
                         </div>
                         <div class="contact-info-item">
@@ -97,7 +97,7 @@
                             </div>
                             <div>
                                 <h4>Call Us</h4>
-                                <p><a href="#" class="contact-phone-link">Loading Phone...</a></p>
+                                <p><a href="tel:+14693801551">(469) 380-1551</a></p>
                             </div>
                         </div>
                         <div class="contact-info-item">
@@ -146,8 +146,8 @@
                 <div class="footer-column contact" aria-labelledby="footer-contact-heading">
                     <h4 id="footer-contact-heading">Get In Touch</h4>
                     <address>
-                        <a href="#" class="contact-phone-link" aria-label="Call us">Loading Phone...</a><br>
-                        <a href="#" class="contact-email-link" aria-label="Email us">Loading Email...</a><br>
+                        <a href="tel:+14693801551" aria-label="Call us at 469-380-1551">(469) 380-1551</a><br>
+                        <a href="mailto:tylerherrick13@gmail.com" aria-label="Email us at tylerherrick13@gmail.com">tylerherrick13@gmail.com</a><br>
                         <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
                     </address>
                 </div>
