--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
             <div class="footer-column contact" aria-labelledby="footer-contact-heading">
-                <h4 id="footer-contact-heading">Get In Touch</h4>
+                <h4 id="footer-contact-heading">Our Service Area:</h4>
                 <address>
                     <span>Serving Dallas, Houston, Austin, & San Antonio.</span>
                 </address>
